# pt-alexnet

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
models/: alexnet.py
